# nornir3_demo

./: .gitignore  .gitmodules  <Plug>_  <Plug>_<Plug>_  Dockerfile.hugo  Makefile  README.md  pyproject.toml  setup.cfg
demo/orchestrator/: orchestrator.py  swagger.yaml
demo/scripts/: 10_inventory_plugin.py  10_inventory_plugin_filter.py  20_connection_plugin.py  30_progress_bar.py  31_progress_bar_and_logs.py  40_dc_aware_runner.py  50_rich_table.py  51_dc_aware_runner_report.py
demo/scripts/00_get_version/: get_version.py
demo/scripts/01_get_version_rich_table/: get_version.py
demo/scripts/02_upgrade_switch/: upgrade_switch.py
demo/scripts/03_upgrade_switch_smart/: upgrade_switch.py
demo/scripts/04_upgrade_switch_smarter/: upgrade_switch.py
demo/scripts/05_controller/: orchestrator.py  swagger.yaml
docs/: index.html  sitemap.xml
docs/_src/: config.toml
docs/_src/content/: _index.md
docs/_src/content/home/: 00_intro.md  10_inventory_plugin.md  20_connection_plugin.md  30_processors.md  40_runners.md  50_functions.md  90_outro.md  (+1 more)
docs/categories/: index.xml
docs/home/: index.xml
docs/reveal-js/css/: reveal.css
nornir3_demo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
nornir3_demo/ext/acmeos/: __init__.py
nornir3_demo/ext/inventory/: __init__.py
nornir3_demo/plugins/connections/: acmeos.py
nornir3_demo/plugins/functions/: rich.py
nornir3_demo/plugins/inventory/: acme.py
nornir3_demo/plugins/processors/: logger.py  prometheus.py  rich.py
nornir3_demo/plugins/runners/: __init__.py  dc_aware.py
(+5 files in other folders)
